Fix Z-Index on whats included

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -304,7 +304,7 @@ header.big {
         padding: 10px 15px;
         background: #fff;
         position: relative;
-        z-index: 999;
+        z-index: 920;
         padding: 25px;
         a {
           line-height: 25px;
